loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:16: error: not found: type orange
  }else if(getCouleurSol():orange){
                           ^